# llm-slo-checker

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  live-slo-check.yml
examples/: anthropic-sonnet.yaml  minimal.yaml  sample-prompts.txt
history/: log.txt
src/llm_slo_checker/: __main__.py  cli.py  config.py  evaluator.py  metrics.py  prober.py  reporter.py
tests/: test_config.py  test_evaluator.py  test_metrics.py  test_prober.py  test_reporter.py
tests/fixtures/: example-config.yaml
