[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-slo-checker"
version = "0.1.0"
description = "SLOs as code for LLM endpoints. Probe, measure, verdict."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Amar Randhawa" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
]

[project.scripts]
llm-slo = "llm_slo_checker.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]

# Test files intentionally colocate imports next to fixture groups for readability
# and include long SSE-fixture byte strings that must remain single lines.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
